# TeamChallenge.io_1345_edu

./: .gitignore  README.md  build.sh  dot_env  main.py  pyproject-poetry.toml  pyproject-uv.toml  pyproject.toml  render.yaml  requirements.txt  run.sh
.github/workflows/: codeql.yml  django.yml  webhooks.yml
docs/: languages.md
project_1345/: manage.py
project_1345/cart/: api_views.py  cart.py  models.py  serializers.py  urls.py  views.py
project_1345/category/: admin.py  api_views.py  models.py  serializers.py  urls.py
project_1345/category/migrations/: 0001_initial.py  0002_categoryschema.py  0003_remove_categoryschema_schema_and_more.py  0004_alter_categoryschema_options_and_more.py  0005_alter_category_active_alter_category_name_and_more.py  (+1 more)
project_1345/language/: admin.py  apps.py  models.py  serializers.py  utils.py
project_1345/product/: admin.py  api_views.py  api_views_generic_api.py  apps.py  models.py  serializers.py  signals.py  urls.py
project_1345/project_1345/: apps.py  asgi.py  schema.py  settings.py  urls.py  wsgi.py
project_1345/storage/: admin.py  models.py
project_1345/users/: api_views.py  permissions.py  serializers.py  urls.py
project_1345/utils/: create_admin_user.py  create_groups.py  get_languages.py
scripts/: create_django_admin.cmd  create_django_auto_admin.cmd  create_django_auto_admin.sh  gen_req_txt.cmd  gen_req_txt.sh  gen_static.sh  gen_translations.cmd  gen_translations.sh  make_migrate_dev_app.cmd  make_migrate_dev_app.sh  migrate_dev_app.sh
srcipts/: create_django_admin.sh  gen_static.cmd  migrate_dev_app.cmd
(+21 files in other folders)
