[tool.poetry]
name = "teamchallenge-io-1345-edu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "teamchallenge"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
drf-yasg = "^1.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
