[tool.poetry]
name = "teamchallenge-io-1345-edu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "teamchallenge"}]

[tool.poetry.dependencies]
python = "^3.11,<3.14"
django = "^5.1.5"
djangorestframework = "^3.15.2"
django-jsoneditor = "^0.2.4"
drf-spectacular = "^0.28.0"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
